Especificando arquivo pom.xml #23

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,13 @@ jobs:
         cache: maven
 
     - name: Resolve dependencies
-      run: ./back-end/mvnw dependency:resolve
+      run: ./back-end/mvnw -f back-end/pom.xml dependency:resolve 
 
     - name: Build with Maven
-      run: ./back-end/mvnw clean install
+      run: ./back-end/mvnw -f back-end/pom.xml clean install
 
     - name: Run unit tests
-      run: ./back-end/mvnw test
+      run: ./back-end/mvnw -f back-end/pom.xml test
 
     - name: Tag the build
       id: tag
