Adicionando branch no pipeline do artefato #23

--- a/.github/workflows/create-artifact.yml
+++ b/.github/workflows/create-artifact.yml
@@ -2,6 +2,8 @@ name: Create Artifact
 
 on:
   push:
+    branches:
+      - features/23-criação-de-pipeline-para-realizar-a-build-do-projeto
     tags:
       - 'rc-*'
 
