--- a/.github/workflows/create-artifact.yml
+++ b/.github/workflows/create-artifact.yml
@@ -31,6 +31,7 @@ jobs:
 
     - name: Static Code Analysis
       uses: github/super-linter@v4
+      continue-on-error: true
       env:
         VALIDATE_ALL_CODEBASE: false
         DEFAULT_BRANCH: main
