--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,7 +22,7 @@ jobs:
         cache: maven
     
     - name: Resolve dependencies
-      run: ./back-end/mvnw -f back-end/pom.xml dependency:resolve
+      run: ./back-end/mvn -f back-end/pom.xml dependency:resolve
 
     - name: Build with Maven
       run: ./back-end/mvn clean install -DskipTests
