--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         mkdir -p build
         ./back-end/mvnw -f back-end/pom.xml package
-        cp target/*.jar build/
+        cp back-end/target/*.jar build/
 
     - name: Create Docker image
       run: docker build ./back-end --file Dockerfile -t "${{ secrets.DOCKER_USERNAME }}"/bank:latest
