--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,7 +45,7 @@ jobs:
         cp back-end/target/*.jar build/
 
     - name: Create Docker image
-      run: docker build ./back-end --file Dockerfile -t "${{ secrets.DOCKER_USERNAME }}"/bank:latest
+      run: docker build . --file back-end/Dockerfile -t "${{ secrets.DOCKER_USERNAME }}"/bank:latest
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
